css/index-style_updated.css
    
html,body{
    background-color:white;
    height:100%;
    margin:0px;
}

.navbar{
    width: 100%;
    font-family: 'Press Start 2P', cursive;
    padding:1% 0%;
    color:rgb( 83, 140, 198);
    border-bottom:1px solid rgb(216, 216, 216);
    position:fixed;
    background-color: white;
}

.fii-invaders{
    font-size: 0.8em;
    margin-right:3%;
    text-align:right;
}

.container{
    width: 100%;
    height:100%;
    padding-top:1%;
    overflow: hidden;
    background-color:rgb(240, 240, 240);
   
    
    
}
.col1{ 
    width:100%;
    border-right:0px solid rgb(216, 216, 216);
    background-color:rgb(240, 240, 240);
    min-width:300px;
    
    
}
.col2{
    float:none;
    width:100%;
    font-size: 0.8em;
    font-family: 'Press Start 2P';
   
}
.sidebar{
    width: 60%;
    display:block;
    margin:auto;
    min-width:230px;
    margin-top: 150px;
    height:20%;
    position:relative;
    border-bottom: 0px solid rgb(216, 216, 216);
    background-color: white;
    max-width:200px;
   

  
    

}

.title{
    
    margin-top:-1px;
    width:5vw; /* 20% of the viewport width */
    height: 5vw;
    border: 0px rgb(216, 216, 216);
    border-style:double;
    margin-left:-1px;
    margin-bottom:-4px;
    background-color:white;
    min-width:60px;
    min-height:60px;
}
.sidebar-links {
    list-style-type: none;
    width:100%;
    padding-left:0px;
    margin-top:-1px;
    margin-bottom:-1px;
    margin-left:0px;
    margin-right:1px;
    position:absolute;

}

.sidebar-link {
    font-size: 0.8em;
    font-family: 'Press Start 2P', cursive;
    color: rgb(83, 140, 198);
    border: 0px 0px solid rgb(216, 216, 216);
    background-color:white;
    display: block;
    border: 0px solid rgb(216, 216, 216); 
    padding: 4%;
    margin:-1px;
    text-decoration: none;
}


.sidebar-link:hover {
    background-color: rgb(83, 140, 198);
    color:white;
    text-decoration: none;
    transition: 0.7s;
}

#controls,#rules{
    margin-top:5%;
    color:rgb(83, 140, 198);
    background-color:white;
    padding:5%;
}
#controls {

    
    -webkit-transition: opacity 0.5s;
    -moz-transition: opacity 0.5s;
    -o-transition: opacity 0.5s;
    transition: opacity 0.5s;
    opacity:0;
 }
 #rules {
    
        
        -webkit-transition: opacity 0.5s;
        -moz-transition: opacity 0.5s;
        -o-transition: opacity 0.5s;
        transition: opacity 0.5s;
        opacity:0;
     }

.canvasContainer {
    display:block;
    margin:auto;
    position: relative;
    width: 80%;
    padding-bottom: 5%;
    height: 0;
}



canvas{
    margin-top:250px;
    border: 1px solid rgb(216, 216, 216);
    width: 100%;
    background-color: #ffb6c1;
}

li{
    list-style-type: none;
    margin: 0;
    color:rgb( 83, 140, 198);
}
li:hover
{
	color:#fff;
}
li:before { 
    font-family: "Material Icons"; 
    margin-right:15px;
    font-size:1.5em;
    background-size: 30px 30px;
    display: inline-block;
    width: 30px; 
    height: 30px;
    content:"";

 }

 li.rules:before{
    background-image: url('../images/invader1_blue.png');    
}

 li.rules:hover::before{
    background-image: url('../images/invader1_white.png');
    
}

li.controls:before{
    background-image: url("../images/invader2_blue.png");
    background-size: 24px 28px;
    display: inline-block;
    width: 24px; 
    height: 28px;
    margin-left:4px;    
    
}

li.controls:hover::before{
    background-image: url("../images/invader2_white.png");     
}

li.desc:before{
    background-image: url("../images/invader3_blue.png");
    background-size: 38px 30px;
    display: inline-block;
    width: 38px; 
    height: 30px;
    margin-left:-6px;
} 

li.desc:hover::before{
    background-image: url("../images/invader3_white.png");
}


li.highscores:before{
    background-image: url('../images/invader4_blue.png');
}
li.highscores:hover:before{
    background-image: url('../images/invader4_white.png');
}




  @keyframes hvr-bob {
 
    50% {
      -webkit-transform: translateY(-1px);
      transform: translateY(-1x);
      
    }
    100% {
      -webkit-transform: translateY(-8px);
      transform: translateY(-8px);
      
    }
  }
 
  @keyframes hvr-bob-float {
    100% {
      -webkit-transform: translateY(-10px);
      transform: translateY(-10px);
      
    }
  }
  li.hvr-bob:before {
    display: inline-block;
    vertical-align: middle;
    -webkit-transform: perspective(0px) translateY(-4px);
    transform: perspective(0px) translateY(-4px);
    box-shadow: 0 0 0px transparent;
  }
  li.hvr-bob:hover::before, li.hvr-bob:focus::before, li.hvr-bob:active::before {
    -webkit-animation-name: hvr-bob-float, hvr-bob;
    animation-name: hvr-bob-float, hvr-bob;
    -webkit-animation-duration: .3s, 1.5s;
    animation-duration: .6s, 1.5s;
    -webkit-animation-delay: 0s, .3s;
    animation-delay: 0s, .3s;
    -webkit-animation-timing-function: ease-out, ease-in-out;
    animation-timing-function: ease-out, ease-in-out;
    -webkit-animation-iteration-count: 1, infinite;
    animation-iteration-count: 1, infinite;
    -webkit-animation-fill-mode: forwards;
    animation-fill-mode: forwards;
    -webkit-animation-direction: normal, alternate;
    animation-direction: normal, alternate;
  }

  @media only screen and (min-width: 1000px){

    .sidebar{
        margin-top:200px;
    }
    canvas{
        margin-top:200px;
    }

    .sidebar-link,.fii-invaders{
        font-size:0.9em;
    }
    .sidebar{
        min-width:260px;
    }
    .col1{
        float:left;
        width: 30%;
        height:100%;
    }
    .col2{
        width: 69%;
        float:right;
        height:100%;
    }
}

@media screen and (min-width: 1800px) {
    .sidebar-link,.fii-invaders{
        font-size:1em;
    }

    .sidebar{
        min-width:350px;
    }
    li:before { 
        margin-right:15px;
        background-size: 40px 40px;
        width: 40px; 
        height: 40px;
    }
    
    li.controls:before{
        background-size: 34px 38px;
        width: 34px; 
        height: 38px;
        margin-left:4px;    
        
    }
    
  
    li.desc:before{
        background-size: 48px 40px;
        width: 48px; 
        height: 40px;
        margin-left:-6px;
    } 
    
    .col1{
        float:left;
        width: 30%;
        height:100%;
    }
    .col2{
        width: 69%;
        float:right;
        height:100%;
    }
}
.overlay {
  position: fixed;
  top: 0;
  bottom: 0;
  left: 0;
  right: 0;
  background: rgba(83, 140, 198, 0.5);
  transition: opacity 500ms;
  visibility: hidden;
  opacity: 0;
}
.overlay:target {
  visibility: visible;
  opacity: 1;
}

.popup {
  margin-left: 70px auto;
  padding: 20px;
  border-radius: 5px;
  width: 90%;
  /*position: relative;*/
  transition: all 5s ease-in-out;
}

.popup h2 {
  margin-top: 0;
  color: #fff;
  font-family: 'Press Start 2P';
}
.popup .close {
  position: absolute;
  top: 20px;
  right: 30px;
  transition: all 200ms;
  font-size: 30px;
  font-weight: bold;
  text-decoration: none;
  color: rgb( 83, 140, 198);
}
.popup .close:hover {
  color: #f1f1f1;
}
.popup .content {
  max-height: 30%;
  overflow: auto;
  text-align:left;
  font-size:10px;
  color: rgb( 255, 255, 255);
  font-family: 'Press Start 2P'
}

@media screen and (max-width: 700px){
    .box{
        width: 70%;
    }
    .popup{
        width: 70%;
    }
    .popupall{
        width:70%;
    }
}

